Fixed overflow-x for ar language calendar widget on dashboard page

--- a/src/dashboard/Dashboard.scss
+++ b/src/dashboard/Dashboard.scss
@@ -503,6 +503,7 @@
 .calendar-view {
   margin: 0 1rem 0.8rem 1rem;
   overflow-y: auto; 
+  overflow-x: hidden ;
   scrollbar-width: thin; 
 }
 
